--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,7 +33,7 @@ security.h2-console=true
 # ===== Spring Web Email =====
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=seungalee314@gmail.com
+spring.mail.username=${MAIL_USERNAME}
 spring.mail.password=${MAIL_PASSWORD}
 
 spring.mail.properties.mail.smtp.auth=true
